@@ -1,5 +1,8 @@
 2006-05-29  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
+	* GNUmakefile.in (web-ext): package .signature files too. They
+	compress well.
+
 	* scm/stencil.scm (write-system-signature): typo.
 
 	* GNUmakefile.in: create web-root/VERSION to help upload scripts.
